@@ -21,6 +21,7 @@ Bruce Atherton
 Charles Hudak
 Charlie Hubbard
 Chris Povirk
+Christian Knorr
 Christoph Wilhelms
 Christophe Labouisse
 Christopher A. Longo
